--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
           <div class="container">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar"><span class="navbar-toggler-icon"></span></button>
-              <a class="navbar-brand mr-auto" href="#">Ristorante Con Fusion</a>
+              <a class="navbar-brand mr-auto" href="#"><img src="img/logo.png" height="30" width="41"  alt=""> </a>
               <div class="collapse navbar-collapse" id="Navbar">
                   <ul class="navbar-nav mr-auto">
                       <li class="nav-item active"><a href="#" class="nav-link"><span class="fa fa-home fa-lg"> </span> Home</a> </li>
@@ -36,7 +36,15 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm-6">
+                <div class="col-12 col-sm-3 align-self-center">
+                  <img src="img/logo.png" alt="" class="img-fluid">
+                </div>
+                <div class="col-12 col-sm-3">
+                  <div class="button align-self-center ab">
+                    <a class="btn btn-block btn-warning btn-sm" href="#reservetable" role="button">Reserve Table</a>
+
+                  </div>
+
                 </div>
             </div>
         </div>
@@ -48,9 +56,14 @@
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
             <div class="col col-sm order-sm-first col-md">
-                <h2>Uthappizza</h2>
-                <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
-            </div>
+              <div class="media">
+                <img src="img/uthappizza.png" alt="uthapizza" class="d-flex mr-3 img-thumbnail align-self-center">
+                <div class="media-body">
+                  <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT </span> <span class="badge badge-pill badge-secondary"> $4.99 </span></h2>
+                  <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+                </div>
+              </div>
+              </div>
         </div>
 
 
@@ -59,8 +72,14 @@
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+              <div class="media">
+                <div class="media-body">
+
+                  <h2 class="mt-0 mb-1">Weekend Grand Buffet <span class="badge badge-danger">NEW </span></h2>
+                  <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person.</p>
+                </div>
+                                  <img src="img/buffet.png" alt="buffet" class="d-flex ml-3 img-thumbnail align-self-center">
+              </div>
             </div>
         </div>
 
@@ -69,11 +88,60 @@
                 <h3>Meet our Culinary Specialists</h3>
             </div>
             <div class="col col-sm order-sm-first col-md">
-                <h2>Alberto Somayya</h2>
-                <h4>Executive Chef</h4>
-                <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
-            </div>
+              <div class="media">
+                <img src="img/alberto.png" alt="alberto" class="d-flex mr-3 img-thumbnail align-self-center">
+                <div class="media-body">
+                  <h2 class="mt-0">Alberto Somayya</h2>
+                  <h4>Executive Chef</h4>
+                  <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                </div>
+                </div>
         </div>
+    </div>
+      <div class="row row-content align-items-center">
+        <div class="col-12 offset-md-2 col-md-8">
+          <div class="card">
+            <h3 class="card-header bg-warning text-white"> <strong>Reserve a Table</strong></h3>
+            <div class="card-body">
+              <form id="reservetable">
+              <div class="form-group row">
+                  <label for="Number of Guests" class="col-md-2 col-form-label">Number of Guests</label>
+                  <div class="col-md-10">
+                    <div class="form-check">
+                      <input type="radio" name="numberofguests" value="1"  id="numberofguests">
+                      <label for="numberofguests" class="form-check-label">1  </label>
+                      <input type="radio" name="numberofguests" value="2"  id="numberofguests">
+                      <label for="numberofguests" class="form-check-label">2  </label>
+                      <input type="radio" name="numberofguests" value="3"  id="numberofguests">
+                      <label for="numberofguests" class="form-check-label">3  </label>
+                      <input type="radio" name="numberofguests" value="4"  id="numberofguests">
+                      <label for="numberofguests" class="form-check-label">4  </label>
+                      <input type="radio" name="numberofguests" value="5"  id="numberofguests">
+                      <label for="numberofguests" class="form-check-label">5  </label>
+                      <input type="radio" name="numberofguests" value="6"  id="numberofguests">
+                      <label for="numberofguests" class="form-check-label">6</label>
+                  </div>
+              </div>
+            </div>
+          </form>
+              <div class="form-group row">
+                <label for="Date and Time" class="col-md-2 col-form-label">Date and Time</label>
+              <div class="col-4 col-md-4">
+                        <input type="text" name="date" value="" class="form-control" placeholder="Date" id="date">
+                </div>
+                <div class="col-4 col-md-4">
+                        <input type="text" name="time" value="" class="form-control" placeholder="Time" id="time">
+                </div>
+
+            </div>
+            <div class="form-group row">
+                <div class="offset-md-2 col-md-10">
+                    <button type="submit" class="btn btn-primary" name="button">Reserve</button>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <footer class="footer">
