--- a/index.html
+++ b/index.html
@@ -70,6 +70,69 @@
           </div>
         </div>
     </div>
+    <div class="modal fade" id="tablemodal" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+          <div class="modal-content">
+              <div class="modal-header">
+                <h4 class="modal-title"><strong>Reserve a Table</strong></h4>
+                <button type="button" class="close" data-dismiss="modal" name="button">&times;</button>
+
+              </div>
+              <div class="modal-body">
+                <form>
+                  <div class="form-group row">
+                      <label for="Number of Guests" class="col-md-2 col-form-label">Number of Guests</label>
+                      <div class="col-md-10">
+                        <div class="form-check">
+                          <input type="radio" name="numberofguests" value="1"  id="numberofguests">
+                          <label for="numberofguests" class="form-check-label">1  </label>
+                          <input type="radio" name="numberofguests" value="2"  id="numberofguests">
+                          <label for="numberofguests" class="form-check-label">2  </label>
+                          <input type="radio" name="numberofguests" value="3"  id="numberofguests">
+                          <label for="numberofguests" class="form-check-label">3  </label>
+                          <input type="radio" name="numberofguests" value="4"  id="numberofguests">
+                          <label for="numberofguests" class="form-check-label">4  </label>
+                          <input type="radio" name="numberofguests" value="5"  id="numberofguests">
+                          <label for="numberofguests" class="form-check-label">5  </label>
+                          <input type="radio" name="numberofguests" value="6"  id="numberofguests">
+                          <label for="numberofguests" class="form-check-label">6</label>
+                      </div>
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <label for="Section" class="col-md-2 col-form-label">Section</label>
+                  <div class="btn-group btn-group-toggle col-10 col-md-10" data-toggle="buttons">
+                  <label class="btn btn-success active">
+                    <input type="radio" name="options" id="option1" autocomplete="off" checked>Non-Smoking
+                  </label>
+                  <label class="btn btn-danger ">
+                    <input type="radio" name="options" id="option2" autocomplete="off"> Smoking
+                  </label>
+                </div>
+                </div>
+                  <div class="form-group row">
+                    <label for="Date and Time" class="col-md-2 col-form-label">Date and Time</label>
+                  <div class="col-4 col-md-4">
+                            <input type="text" name="date" value="" class="form-control" placeholder="Date" id="date">
+                    </div>
+                    <div class="col-4 col-md-4">
+                            <input type="text" name="time" value="" class="form-control" placeholder="Time" id="time">
+                    </div>
+
+                </div>
+                <div class="form-group row">
+                    <div class="offset-md-2 col-md-10">
+                      <button type="button" class="btn btn-secondary ml-auto" data-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn btn-primary" name="button">Reserve</button>
+                    </div>
+                </div>
+              </div>
+            </div>
+              </form>
+              </div>
+          </div>
+        </div>
+    </div>
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -82,8 +145,7 @@
                 </div>
                 <div class="col-12 col-sm-3">
                   <div class="button align-self-center ab">
-                    <a class="btn btn-block btn-warning btn-sm nav-link" data-toggle="tooltip" data-html="true" title="Or Call Us at <br><strong>+85 12345667</strong>" data-placement="bottom" href="#reservetable" role="button">Reserve Table</a>
-
+                    <button type="button" class="btn btn-warning btn-lg btn-block" data-toggle="modal" data-target="#tablemodal"><div class="white">Reserve Table</div></button>
                   </div>
 
                 </div>
@@ -92,6 +154,49 @@
     </header>
 
     <div class="container">
+      <div class="row row-content">
+        <div class="col">
+          <div class="carousel slide" id="mycarousel" data-ride="carousel">
+            <div class="carousel-inner" role="listbox">
+              <div class="carousel-item active">
+                <img src="img/uthappizza.png" alt="uthappizza" class="d-block img-fluid">
+                <div class="carousel-caption d-none d-md-block">
+                  <h2>Uthappizza <span class="badge badge-danger">HOT </span> <span class="badge badge-pill badge-default"> $4.99 </span></h2>
+                  <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="img/buffet.png" alt="buffet" class="d-block img-fluid">
+                <div class="carousel-caption d-none d-md-block">
+                  <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW </span></h2>
+                  <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="img/alberto.png" alt="alberto" class="d-block img-fluid">
+                <div class="carousel-caption d-none d-md-block">
+                  <h4>Executive Chef</h4>
+                  <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                </div>
+              </div>
+            </div>
+            <ol class="carousel-indicators">
+              <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+              <li data-target="#mycarousel" data-slide-to="1"></li>
+              <li data-target="#mycarousel" data-slide-to="2"></li>
+
+            </ol>
+            <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev">
+                       <span class="carousel-control-prev-icon"></span>
+                   </a>
+                   <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
+                       <span class="carousel-control-next-icon"></span>
+                   </a>
+          </div>
+
+        </div>
+
+      </div>
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 order-sm-last col-md-3">
                 <h3>Our Lipsmacking Culinary Creations</h3>
@@ -139,51 +244,7 @@
                 </div>
         </div>
     </div>
-      <div class="row row-content align-items-center">
-        <div class="col-12 offset-md-2 col-md-8">
-          <div class="card">
-            <h3 class="card-header bg-warning text-white"> <strong>Reserve a Table</strong></h3>
-            <div class="card-body">
-              <form id="reservetable">
-              <div class="form-group row">
-                  <label for="Number of Guests" class="col-md-2 col-form-label">Number of Guests</label>
-                  <div class="col-md-10">
-                    <div class="form-check">
-                      <input type="radio" name="numberofguests" value="1"  id="numberofguests">
-                      <label for="numberofguests" class="form-check-label">1  </label>
-                      <input type="radio" name="numberofguests" value="2"  id="numberofguests">
-                      <label for="numberofguests" class="form-check-label">2  </label>
-                      <input type="radio" name="numberofguests" value="3"  id="numberofguests">
-                      <label for="numberofguests" class="form-check-label">3  </label>
-                      <input type="radio" name="numberofguests" value="4"  id="numberofguests">
-                      <label for="numberofguests" class="form-check-label">4  </label>
-                      <input type="radio" name="numberofguests" value="5"  id="numberofguests">
-                      <label for="numberofguests" class="form-check-label">5  </label>
-                      <input type="radio" name="numberofguests" value="6"  id="numberofguests">
-                      <label for="numberofguests" class="form-check-label">6</label>
-                  </div>
-              </div>
-            </div>
-          </form>
-              <div class="form-group row">
-                <label for="Date and Time" class="col-md-2 col-form-label">Date and Time</label>
-              <div class="col-4 col-md-4">
-                        <input type="text" name="date" value="" class="form-control" placeholder="Date" id="date">
-                </div>
-                <div class="col-4 col-md-4">
-                        <input type="text" name="time" value="" class="form-control" placeholder="Time" id="time">
-                </div>
-
-            </div>
-            <div class="form-group row">
-                <div class="offset-md-2 col-md-10">
-                    <button type="submit" class="btn btn-primary" name="button">Reserve</button>
-                </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+  </div>
 
     <footer class="footer">
         <div class="container">
@@ -230,11 +291,12 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-      $(document).ready(function() {
-        $('[data-toggle="tooltip"]').tooltip();
-      });
-    </script>
+    <script type="text/javascript">
+    //starts the carousel
+    $document.ready(function () {
+        $('#myCarousel').carousel();
+    });
+</script>
 </body>
 
 </html>
