--- a/index.html
+++ b/index.html
@@ -192,6 +192,9 @@
                    <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                        <span class="carousel-control-next-icon"></span>
                    </a>
+                     <button class="btn btn-danger btn-sm" id="carouselButton">
+                         <span id="carousel-button-icon" class="fa fa-pause"></span>
+                     </button>
           </div>
 
         </div>
@@ -297,6 +300,24 @@
         $('#myCarousel').carousel();
     });
 </script>
+<script>
+    $(document).ready(function(){
+      $('#mycarousel').carousel({ interval: 2 });
+      $("#carouselButton").click(function(){
+          if ($("#carouselButton").children("span").hasClass('fa-pause')) {
+              $("#mycarousel").carousel('pause');
+              $("#carouselButton").children("span").removeClass('fa-pause');
+              $("#carouselButton").children("span").addClass('fa-play');
+          }
+          else if ($("#carouselButton").children("span").hasClass('fa-play')){
+              $("#mycarousel").carousel('cycle');
+              $("#carouselButton").children("span").removeClass('fa-play');
+              $("#carouselButton").children("span").addClass('fa-pause');
+          }
+      });
+    });
+</script>
+
 </body>
 
 </html>
